--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>וורדל</title>
-    <!--    <link rel="icon" type="image/x-icon" href="">-->
-    <!--    <meta name="description"-->
-    <!--          content="וורדעל- 5 אותיות, משחק מילים יומי שמבוסס על Wordle . במשחק וורדל מנחשים את המלה תוך שישה ניסיונות או פחות, בכל שורה הזינו מלה בת חמש אותיות בדיוק">-->
+    <title>lkjnlkn</title>
 </head>
 <body>
-<header></header>
-<div></div>
+kjhkj
 </body>
 </html>
