--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>lkjnlkn</title>
+    <title>וורדל</title>
+    <!--    <link rel="icon" type="image/x-icon" href="">-->
+    <!--    <meta name="description"-->
+    <!--          content="וורדעל- 5 אותיות, משחק מילים יומי שמבוסס על Wordle . במשחק וורדל מנחשים את המלה תוך שישה ניסיונות או פחות, בכל שורה הזינו מלה בת חמש אותיות בדיוק">-->
+    <link href="widescreen.css" rel="stylesheet">
 </head>
 <body>
-kjhkj
+<header></header>
+<div class="board">
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+</div>
+<div class="keyboard">
+    <div class="keyboard-row">
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+    </div>
+    <div class="keyboard-row">
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+    </div>
+    <div class="keyboard-row">
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+    </div>
+</div>
 </body>
 </html>
