--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,83 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>וורדל</title>
+    <title>wordle</title>
     <!--    <link rel="icon" type="image/x-icon" href="">-->
     <!--    <meta name="description"-->
     <!--          content="וורדעל- 5 אותיות, משחק מילים יומי שמבוסס על Wordle . במשחק וורדל מנחשים את המלה תוך שישה ניסיונות או פחות, בכל שורה הזינו מלה בת חמש אותיות בדיוק">-->
     <link href="widescreen.css" rel="stylesheet">
 </head>
 <body>
-<header></header>
-<div class="board">
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-    <div class="tile"></div>
-</div>
-<div class="keyboard">
-    <div class="keyboard-row">
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
+<header><h1>wordle</h1></header>
+<div class="try">
+    <div class="board">
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
     </div>
-    <div class="keyboard-row">
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-    </div>
-    <div class="keyboard-row">
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
-        <div class="key"></div>
+    <div class="keyboard">
+        <div class="keyboard-row">
+            <button class="key">Q</button>
+            <button class="key">W</button>
+            <button class="key">E</button>
+            <button class="key">R</button>
+            <button class="key">T</button>
+            <button class="key">Y</button>
+            <button class="key">U</button>
+            <button class="key">I</button>
+            <button class="key">O</button>
+            <button class="key">P</button>
+            <button class="key bigger-key"><img src="img/backspace.png"></button>
+        </div>
+        <div class="keyboard-row">
+            <button class="key">L</button>
+            <button class="key">K</button>
+            <button class="key">J</button>
+            <button class="key">H</button>
+            <button class="key">G</button>
+            <button class="key">F</button>
+            <button class="key">D</button>
+            <button class="key">S</button>
+            <button class="key">A</button>
+        </div>
+        <div class="keyboard-row">
+            <button class="key">M</button>
+            <button class="key">N</button>
+            <button class="key">B</button>
+            <button class="key">V</button>
+            <button class="key">C</button>
+            <button class="key">X</button>
+            <button class="key">Z</button>
+            <button class="key bigger-key"><img src="img/enter.png"></button>
+        </div>
     </div>
 </div>
 </body>
