--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle</title>
-    <link rel="icon" type="image/x-icon" href="public/assent/enter.png">
+    <link rel="icon" type="image/x-icon" href="assent/enter.png">
     <link href="src/widescreen.css" rel="stylesheet">
 </head>
 <body>
@@ -83,7 +83,7 @@
             <div class="white-space"></div>
         </div>
         <div class="keyboard-row">
-            <button class="key bigger-key"><img src="public/assent/enter.png"></button>
+            <button class="key bigger-key"><img src="assent/enter.png"></button>
             <button class="key" id="Z">Z</button>
             <button class="key" id="X">X</button>
             <button class="key" id="C">C</button>
@@ -91,7 +91,7 @@
             <button class="key" id="B">B</button>
             <button class="key" id="N">N</button>
             <button class="key" id="M">M</button>
-            <button class="key bigger-key"><img src="public/assent/backspace.png"></button>
+            <button class="key bigger-key"><img src="assent/backspace.png"></button>
         </div>
     </div>
 </div>
